[package]
name = "edgeless_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4"
regex = "1.5"

edgeless_utils = { path = "../edgeless_utils" }