[package]
name = "edgeless_plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
uuid = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
regex = "1.5"

edgeless_utils = { path = "../edgeless_utils" }
edgeless_core = { path = "../edgeless_core" }
bindings_7z = { path = "../bindings_7z" }
bindings_pecmd = { path = "../bindings_pecmd" }
